renaming codrspace and removing a bunch of cruft

--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load mptt_comments_tags thumbnail %}
-{% load short_codes codrspace_tags %}
+{% load short_codes %}
 
 {% block title %}{{ session.section.course }}{% endblock %}
 {% block header %}{% endblock %}
