--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -82,7 +82,7 @@
     <script src="{{ STATIC_URL }}less/bootstrap/js/popover.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/tab.js"></script>
     {% endcompress %}    
-    <script src="{{ STATIC_URL }}codrspace.js"></script>
+    <script src="{{ STATIC_URL }}blog.js"></script>
     <script>
 
       var _gaq = _gaq || [];
