--- a/txrx/templates/index.html
+++ b/txrx/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% load codrspace_tags short_codes %}
-{% load thumbnail crop_util %}
+{% load short_codes thumbnail crop_util %}
 
 {% block full_title %}Welcome to TX/RX Labs{% endblock %}
 {% block header %}{% endblock %}
