--- a/event/templates/event/occurrence_detail.html
+++ b/event/templates/event/occurrence_detail.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% load short_codes codrspace_tags %}
-{% load thumbnail %}
+{% load short_codes thumbnail %}
 
 {% block title %}{{ occurrence.name }}{% endblock %}
 
