--- a/txrx/templates/flatpages/default.html
+++ b/txrx/templates/flatpages/default.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load codrspace_tags thumbnail %}
+{% load thumbnail %}
 
 {% block full_title %}{{ flatpage.title }}{% endblock %}
 {% block header %}{% endblock %}
