Removing the slash in many places

--- a/txrx/templates/email/new_classes.html
+++ b/txrx/templates/email/new_classes.html
@@ -1,6 +1,6 @@
 {% load i18n %}{% autoescape off %}
 
-We're writting to let you know about all the new classes at TX/RX. Here are all the classes added in the past two weeks:
+We're writting to let you know about all the new classes at TXRX. Here are all the classes added in the past two weeks:
 
 {% for session in new_sessions %}
 {{ session.name }}
