--- a/txrx/templates/email/pending_evaluation.html
+++ b/txrx/templates/email/pending_evaluation.html
@@ -1,5 +1,5 @@
 {% load i18n %}{% autoescape off %}
-{% trans "You recently took a class at TX/RX Labs. We would like you to evaluate this class to help us to improve our courses. The course evaluation is annonymous and helps instructors improve the class for future students and to help TX/RX decide what classes we want to teach in the future." %}
+{% trans "You recently took a class at TXRX Labs. We would like you to evaluate this class to help us to improve our courses. The course evaluation is annonymous and helps instructors improve the class for future students and to help TXRX decide what classes we want to teach in the future." %}
 
 {% trans "Please go to the following link to evaluate your class." %}
 {% block reset_link %}
@@ -8,6 +8,6 @@
 
 {% trans "Thank you for your time and we hope to see you again soon!" %}
 
-TX/RX Labs
+TXRX Labs
 
 {% endautoescape %}
