--- a/txrx/templates/flatpages/about-us.html
+++ b/txrx/templates/flatpages/about-us.html
@@ -8,7 +8,7 @@
 <div id="flatpage">
   <h3 class="block_title">Location 205 Roberts St. Houston, Tx 77003</h3>
   <div class="well">
-    <p><strong>Tx/Rx Labs is Houston’s Hackerspace.</strong> We are a project-based team of makers with backgrounds in the creative arts: electronic circuitry, music composition, 3D printing, computer science and security, screenprinting, fashion design, and even haute cuisine.</p>
+    <p><strong>TXRX Labs is Houston’s Hackerspace.</strong> We are a project-based team of makers with backgrounds in the creative arts: electronic circuitry, music composition, 3D printing, computer science and security, screenprinting, fashion design, and even haute cuisine.</p>
     <p>Visit us on Open House Fridays at 7pm to:</p>
     <ul>
       <li>Visit with our members.</li>
@@ -27,9 +27,9 @@
   <h3 class="block_title">How to Participate</h3>
   <div class="well">
     <p>Most of our events are open and available to the general public. Access to some of our lab space and tools is limited to our members who have undergone training in the safe use of our lab tools and safety equipment. Information on our upcoming events is available on our calendar.</p>
-    <p>You can become a member by coming to one of our Open House Fridays and telling one of our officers or directors that you want to be a member.  The membership fee gets you access to tools, collective wisdom, and a racous list-serve!  We have been known to stay late and turn the volume to eleven.  We look forward to welcoming you to Tx/Rx Labs.</p>
+    <p>You can become a member by coming to one of our Open House Fridays and telling one of our officers or directors that you want to be a member.  The membership fee gets you access to tools, collective wisdom, and a racous list-serve!  We have been known to stay late and turn the volume to eleven.  We look forward to welcoming you to TXRX Labs.</p>
   </div>
-  <h3 class="block_title">Why TX/RX Labs?</h3>
+  <h3 class="block_title">Why TXRX Labs?</h3>
   <div class="well">
     <p>Imagine how much innovation could occur if the creative community in Houston had access to the tools and knowledge needed to bring its ideas to fruition.  We believe that we must revive the tradition of design and manufacturing in America after decades of neglect and decline.  Many of America’s greatest industries began in inspired moments in garage workshops.  We hope to provide you with that workshop through our classes and other educational programs, collective wisdom, and lab space.</p>
   </div>
