--- a/txrx/templates/index.html
+++ b/txrx/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load short_codes thumbnail crop_util %}
 
-{% block full_title %}Welcome to TX/RX Labs{% endblock %}
+{% block full_title %}Welcome to TXRX Labs{% endblock %}
 {% block header %}{% endblock %}
 
 {% block content %}
