--- a/txrx/templates/survey.html
+++ b/txrx/templates/survey.html
@@ -9,8 +9,8 @@
   html { overflow: hidden; }
   h1 { margin: 0.3em 0; font-size: 1.5em; }
 </style>
-<h1 class="ss-form-title">TX/RX New Member Questionaire</h1>
-Please fill this form out to complete your membership @ TX/RX Labs. This form will be used to help let you know about events and projects at the lab that may be of interest to you.
+<h1 class="ss-form-title">TXRX New Member Questionaire</h1>
+Please fill this form out to complete your membership @ TXRX Labs. This form will be used to help let you know about events and projects at the lab that may be of interest to you.
 <br />
 <form method="POST">
   {% csrf_token %}
