--- a/txrx/templates/thing/index.html
+++ b/txrx/templates/thing/index.html
@@ -4,7 +4,7 @@
 {% block title %}Recent Items{% endblock %}
 
 {% block main %}
-<h1 class="page_title">Items recently made at TX/RX</h1>
+<h1 class="page_title">Items recently made at TXRX</h1>
 <div class="thing_index">
   <div class="things">
     {% for thing in paginator.current_list %}
