--- a/txrx/templates/_nav.html
+++ b/txrx/templates/_nav.html
@@ -10,7 +10,7 @@
     </button>
     <a class="navbar-brand" href="/">
       <img src="{{ STATIC_URL }}img/new_logo.png" height="49"
-           alt="Tx/Rx Labs - {{ SITE_TAGLINE }}" title="Tx/Rx Labs - {{ SITE_TAGLINE }}"/></a>
+           alt="TXRX Labs - {{ SITE_TAGLINE }}" title="TXRX Labs - {{ SITE_TAGLINE }}"/></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
