--- a/txrx/templates/footer.html
+++ b/txrx/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="left">TX/RX Labs - Houston's Hackerspace</div>
+<div class="left">TXRX Labs - Houston's Hackerspace</div>
 <div class="center">
   <a href="https://goo.gl/maps/xD5ST">205 Roberts Street, Houston, TX</a>
 </div>
