--- a/txrx/templates/registration/base.html
+++ b/txrx/templates/registration/base.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 
-{% block full_title %}TX/RX Registration{% endblock %}
-{% block header_content %}TX/RX Registration{% endblock %}
+{% block full_title %}TXRX Registration{% endblock %}
+{% block header_content %}TXRX Registration{% endblock %}
