--- a/txrx/templates/500.html
+++ b/txrx/templates/500.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>500 Error</h1>
+<h1>Server Error</h1>
 <p>
-An error has occured. Sorry. The admins have been notified and will fix the problem soon. Feel free to email Chris and tell him what you did to cause this error, and he'll write you back when you can safely do what you were trying to do. chris (at) lablackey (dot) com
+An internal server error has occurred. The administrators have been notified and we will fix this as soon as possible. Please go back or try again.
 </p>
 {% endblock %}
