--- a/txrx/templates/admin/index.html
+++ b/txrx/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% extends "admin/base_site.html" %}
-{% load i18n admin_static %}
+{% load i18n admin_static admin_dashboard %}
 
 {% block extrastyle %}
   {{ block.super }}
@@ -13,7 +13,36 @@
 
 {% block content %}
   <div id="content-main">
-    <h1>Check out the new menu on the left!</h1>
+    {% get_room_conflicts %}
+    {% if room_conflicts %}
+    <h1>Potential room conflicts</h1>
+    {% for location,conflicts in room_conflicts %}
+    <div class="module">
+      <table class="table-overview applist" summary="{% blocktrans %}Conflicting classes and events.{% endblocktrans %}">
+        <caption>Conflict at {{ location.name }}</caption>
+        <tr><td>
+            <dl>
+              {% for times,events in conflicts %}
+              <dt>{{ times.0.date }} ({{ times.0|date:"G:m" }} - {{ times.1|date:"G:m" }})</dt>
+              <dd>
+                <ul class="actionlist">
+                  {% for event in events %}
+                  <li> 
+                    <a href="{{ event.get_absolute_url }}"><i class="icon-share" title="View on Site"></i></a>
+                    <a href="{{ event.get_admin_url }}"><i class="icon-edit" title="Edit in Admin"></i></a>
+                    {{ event.short_name }}
+                  </li>
+                  {% endfor %}
+                </ul>
+              </dd>
+              <br />
+              {% endfor %}
+            </dl>
+        </td></tr>
+      </table>
+    </div>
+    {% endfor %}
+    {% endif %}
     {% comment %}
     {% if app_list %}
       {% for app in app_list %}
