--- a/txrx/templates/admin/index.html
+++ b/txrx/templates/admin/index.html
@@ -18,8 +18,9 @@
     {% if room_conflicts %}
     <h1>Potential room conflicts</h1>
     {% for location,conflicts in room_conflicts %}
-    <div class="module">
-      <table class="table-overview applist" summary="{% blocktrans %}Conflicting classes and events.{% endblocktrans %}">
+    <div class="module" style="width: 375px;">
+      <table class="table-overview applist" summary="{% blocktrans %}Conflicting classes and events.{% endblocktrans %}"
+             style="width: 100%">
         <caption>Conflict at {{ location.name }}</caption>
         <tr><td>
             <dl>
@@ -44,6 +45,42 @@
               </dd>
               {% if not forloop.last %}<br />{% endif %}
               {% endfor %}
+            </dl>
+        </td></tr>
+      </table>
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% get_courses_needed %}
+    {% if courses_needed %}
+    <h1>Courses Needed</h1>
+    {% for course in courses_needed %}
+    <div class="module" style="width: 375px;">
+      <table class="table-overview applist" summary="{% blocktrans %}Conflicting classes and events.{% endblocktrans %}"
+             style="width: 100%">
+        <tr><td>
+            <dl>
+              <dt><h2>{{ course }}</h2></dt>
+              <dd>
+                Last taught by {{ course.last_session.user }} on {{ course.last_session.first_date|date:"m/d/Y" }}
+              </dd>
+              <dd>
+                <br />
+                <a class="btn btn-success" href="{{ course.last_session.get_absolute_url }}">
+                  <i class="icon-share" title="View Session on Site"></i> View</a>
+                <a class="btn btn-success" href="{{ course.last_session.get_admin_url }}">
+                  <i class="icon-search" title="Edit Session in Admin"></i> Edit</a>
+                <a class="btn btn-success" href="{% url "admin:course_session_add" %}">
+                  <i class="icon-plus" title="Add New Session"></i> New</a>
+              </dd>
+              <dd>
+                <br />
+                {% for n in "136" %}
+                <a href="{% url "course:delay_reschedule" course.pk n %}">
+                  <button class="btn btn-warning" title="Delay for {{ n }} Months">
+                    <i class="icon-plus"></i>{{ n }} Mo</button></a>
+                {% endfor %}
+              </dd>
             </dl>
         </td></tr>
       </table>
