--- a/txrx/templates/admin/index.html
+++ b/txrx/templates/admin/index.html
@@ -62,14 +62,27 @@
             <dl>
               <dt><h2>{{ course }}</h2></dt>
               <dd>
-                Last taught by {{ course.last_session.user }} on {{ course.last_session.first_date|date:"m/d/Y" }}
+                <div>
+                  {% if course.last_session %}
+                  {% if course.last_session.archived %}
+                  Last taught
+                  {% else %}
+                  <b style="color:red">[{{ course.last_session.closed_string|upper }}]</b> with
+                  {% endif %}
+                  {{ course.last_session.user }} on {{ course.last_session.first_date|date:"m/d/Y" }}
+                  {% else %}
+                  <b>Never Taught</b>
+                  {% endif %}
+                </div>
               </dd>
               <dd>
                 <br />
+                {% if course.last_session %}
                 <a class="btn btn-success" href="{{ course.last_session.get_absolute_url }}">
                   <i class="icon-share" title="View Session on Site"></i> View</a>
                 <a class="btn btn-success" href="{{ course.last_session.get_admin_url }}">
                   <i class="icon-search" title="Edit Session in Admin"></i> Edit</a>
+                {% endif %}
                 <a class="btn btn-success" href="{% url "admin:course_session_add" %}">
                   <i class="icon-plus" title="Add New Session"></i> New</a>
               </dd>
