--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -11,7 +11,7 @@
       {% if settings.DEBUG %}
       var _NOTIFY_URL = "http://dev.txrxlabs.org:8009/tx/rx/ipn/handler/"
       {% else %}
-      var _NOTIFY_URL = "http://txrxlabs.org/tx/rx/ipn/handler/"
+      var _NOTIFY_URL = "https://txrxlabs.org/tx/rx/ipn/handler/"
       {% endif %}
       var _USER_NUMBER = "{{ request.user.pk }}";
     </script>
@@ -45,10 +45,10 @@
     {#! <meta property="og:image" content="https:///txrxlabs.org/" /> #}
     <meta property="fb:app_id" content="" />
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     {% block analytics %}{{ ANALYTICS_CODE|safe }}{% endblock %}
-    <script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript" src="//ws.sharethis.com/button/buttons.js"></script>
     <script type="text/javascript">stLight.options({publisher: "56794c5c-23aa-4e30-b62c-dcc177306755", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
   </head>
   <body>
