--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -125,6 +125,8 @@ form label.required {
   font-weight: bold;
 }
 
+form.filters { margin-bottom: 10px; }
+
 #bot_right,#mobileCart {
   border: double 4px;
   bottom: 0px;
