--- a/tool/templates/tool/lab_index.html
+++ b/tool/templates/tool/lab_index.html
@@ -12,7 +12,7 @@
     <a href="{% url "lab_detail" lab.slug lab.id %}">
       <img class="bg" src="{{ im.url }}" alt="" />
       <div class="bottom">
-        <div class="title">{{ lab.title }}</div>
+        <div class="title">{{ lab.name }}</div>
       </div>
     </a>
   </div>
