adding course social and hidding show bigger on all but things

--- a/thing/templates/thing/detail.html
+++ b/thing/templates/thing/detail.html
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col-sm-8">
     <div class="thing_detail">
-      {% include "widgets/thing_slideshow.html" %}
+      {% include "widgets/thing_slideshow.html" with show_bigger=1 %}
     </div>
   </div>
   <div class="col-sm-4">
