--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -5,7 +5,7 @@
 {% block title %}{{ session.section.course }}{% endblock %}
 {% block header %}{% endblock %}
 
-{% block fb_title %}{{ session.section.course }} - TXRX Labs{% endblock %}
+{% block fb_title %}{{ session.section.course }} at TXRX Labs{% endblock %}
 {% block fb_description %}{{ session.section.description|implosivo|escape }}{% endblock %}
 
 {% block main %}
@@ -100,26 +100,33 @@
     <div style="clear: both;"></div>
     <div class="col-xs-12">{% display_comment_toplevel_for session %}</div>
   </div>
- </div>
- <div class="col-sm-3" id="side">
-   {% if request.user.is_staff %}
-   {% include "course/_instructor_panel.html" %}
-   {% elif enrollment %}
-   <div class="well">
-     <h2>You are enrolled in this course</h2>
-   </div>
-   {# {% include "course/_student_panel.html" %} #}
-   {% endif %}
-   {% include "course/_cart.html" %}
-   {% if session.related_sessions %}
-   <div class="related_sessions">
-     <h4>Checkout these similar classes!</h4>
-     {% for s in session.related_sessions|slice:":5" %}
-     <div>
-       <a href="{{ s.get_absolute_url }}"><b>[{{ s.first_date|date:"M j" }}]</b> {{ s.section.course.get_short_name }}</a>
-     </div>
-     {% endfor %}
-   </div>
-   {% endif %}
+</div>
+<div class="col-sm-3" id="side">
+  <center>
+    <span class="st_facebook_large" displayText="Facebook"></span>
+    <span class="st_twitter_large" displayText="Tweet" st_via="TXRXLabs"></span>
+    <span class="st_pinterest_large" displayText="Pinterest"></span>
+    <span class="st_googleplus_large" displayText="Google +"></span>
+    <span class="st_reddit_large" displayText="Reddit"></span>
+  </center>
+  {% if request.user.is_staff %}
+  {% include "course/_instructor_panel.html" %}
+  {% elif enrollment %}
+  <div class="well">
+    <h2>You are enrolled in this course</h2>
+  </div>
+  {# {% include "course/_student_panel.html" %} #}
+  {% endif %}
+  {% include "course/_cart.html" %}
+  {% if session.related_sessions %}
+  <div class="related_sessions">
+    <h4>Checkout these similar classes!</h4>
+    {% for s in session.related_sessions|slice:":5" %}
+    <div>
+      <a href="{{ s.get_absolute_url }}"><b>[{{ s.first_date|date:"M j" }}]</b> {{ s.section.course.get_short_name }}</a>
+    </div>
+    {% endfor %}
+  </div>
+  {% endif %}
 </div>
 {% endblock %}
