--- a/txrx/templates/widgets/thing_slideshow.html
+++ b/txrx/templates/widgets/thing_slideshow.html
@@ -7,7 +7,7 @@
     <div class="slide"{% if not forloop.first %} style="display:none;"{% endif %}>
       <img src="{{ im.url }}" width="750" height="500" />
       {% if show_bigger %}
-      {% thumbnail photo.file "x1000" crop="noop" as bigger %}
+      {% thumbnail photo.file "1200" crop="noop" as bigger %}
       <a href="{{ bigger.url }}" class="full-screen" data-lightbox="slideshow">
         <i class="fa fa-search-plus"></i></a>
       {% endthumbnail %}
