--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -4,32 +4,43 @@
 {% block title %}Classes {{ term.name }}{% endblock %}
 {% block header %}{% endblock %}
 
-{% block content %}
-<h1 class="page_title">
-  {{ term.name }} Classes
-  <div class="calendar_widget">
-    <a href="javascript:;" onclick="$('.add_to_calendar').toggle()">
-      <span class="glyphicon glyphicon-calendar"></span></a>
-    {% include "course/_add_to_calendar.html" with calendar_event=occurrence calendar_context="classes" %}
-  </div>
-</h1>
-{% if request.user.is_authenticated %}
-{# TODO: my classes widget #}
-{% else %}
-<p class="alert alert-error">
-  Already signed up? <a href="/accounts/login/">Log in</a> to see your classes.<br />
-  If not, an account will be automatically created when you first pay for a class.
-</p>
-{% endif %}
-{% include "widgets/filters.html" %}
-<div class="course_list">
-  {% for course in courses %}
-  {% include "course/_course_row.html" %}
-  {% endfor %}
+{% block main %}
+<div class="col-sm-6 col-md-4" id="side">
+  {% include "widgets/filters.html" %}
 </div>
-{% endblock %}
-
-{% block side %}
-{% include "course/_cart.html" %}
-{% include "course/_myclasses.html" %}
+<div class="col-sm-6 col-md-8">
+  <h1 class="page_title">
+    {{ term.name }} Classes
+    <div class="calendar_widget">
+      <a href="javascript:;" onclick="$('.add_to_calendar').toggle()">
+        <span class="glyphicon glyphicon-calendar"></span></a>
+      {% include "course/_add_to_calendar.html" with calendar_event=occurrence calendar_context="classes" %}
+    </div>
+  </h1>
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="active"><a href="#all_classes" role="tab" data-toggle="tab">All Classes</a></li>
+    <li><a href="#my_classes" role="tab" data-toggle="tab">My Classes ({{ user_session|length }})</a></li>
+  </ul>
+  <div class="tab-content">
+    <div class="tab-pane active" id="all_classes">
+      <div class="course_list">
+        {% for course in courses %}
+        {% include "course/_course_row.html" %}
+        {% endfor %}
+      </div>
+    </div>
+    <div class="tab-pane" id="my_classes">
+      {% if request.user.is_authenticated %}
+      {% include "course/_myclasses.html" %}
+      {% else %}
+      <p class="alert alert-error">
+        Already signed up?
+        <a href="/accounts/login/?next={{ request.path|urlencode }}{{ "#my_classes"|urlencode }}">Log in</a>
+        to see your classes.<br />
+        If not, an account will be automatically created when you first pay for a class.
+      </p>
+      {% endif %}
+    </div>
+  </div>
+</div>
 {% endblock %}
