cart modal added

--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -189,8 +189,8 @@
 
 .course, .course-detail {
   .add { display: inline-block; }
-  .drop, &.in-cart .add { display: none; margin: 0 auto; }
-  &.in-cart .drop { display: inline-block; }
+  .drop, .in-cart .add { display: none; margin: 0 auto; }
+  .in-cart .drop { display: inline-block; }
 }
 
 .notify_course {
