--- a/txrx/static/less/nav.less
+++ b/txrx/static/less/nav.less
@@ -35,8 +35,11 @@
 }
 @media (min-width: @screen-md-min) {
   .nav > li.social {
+    margin-left: 15px;
     margin-right: 15px;
+    border-left: 2px solid rgba(0,0,0,0.3);
     border-right: 2px solid rgba(0,0,0,0.3);
+    padding-left: 10px;
     padding-right: 10px;
     margin-top: 2px;
   }
