--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -52,6 +52,26 @@
     <script type="text/javascript">stLight.options({publisher: "56794c5c-23aa-4e30-b62c-dcc177306755", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
   </head>
   <body>
+    {# this can eventually be moved int _cart.html #}
+    <div class="modal fade" id="cartModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span>
+              <span class="sr-only">Close</span></button>
+            <h4 class="modal-title">Shopping Cart</h4>
+          </div>
+          <div class="modal-body">
+            {% include "course/_cart.html" %}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="pull-left btn btn-danger" data-dismiss="modal">Keep Shopping</button>
+            <a href="javascript:;" onclick="startCheckout(); return false">
+              <img src="{{ STATIC_URL }}img/paypal.png"></a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
       {% block nav %}{% include "_nav.html" with page="home" %}{% endblock %}
       {% block messages %}{% include "_messages.html" %}{% endblock %}
